--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -38,6 +38,7 @@
     " import wandb\n",
     " import pandas as pd\n",
     "\n",
+    "# Load sample data from Wandb\n",
     " run = wandb.init(project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
     " local_path = wandb.use_artifact(\"sample.csv:latest\").file()\n",
     " df = pd.read_csv(local_path)"
@@ -109,6 +110,7 @@
    "source": [
     "import pandas_profiling\n",
     "\n",
+    "# Using pandas_profiling to have an overview of data\n",
     "profile = pandas_profiling.ProfileReport(df)\n",
     "profile.to_widgets()"
    ]
